# twtGUI

./: .gitignore  CMakeLists.txt  CONTRIBUTING.MD  Cargo.toml  LICENSE  README.md  build.rs  config.ini  package-lock.json  package.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build-2.yml  build.yml  ci.yml  release.yml
electron/: main.cjs  preload.cjs
include/: download.h  downloadtask.h  downloadworker.h
src/: app.rs  config.cpp  config.h  config.rs  download.cpp  downloadtask.cpp  downloadworker.cpp  logging.rs  main.cpp  main.rs  twtxt.rs  utils.rs
src/components/: Sidebar.astro  Titlebar.astro  TweetFeed.astro  feed.rs  mod.rs  og_embed.rs  threaded_feed.rs  tweet.rs  user_card.rs
src/pages/: following.rs  mod.rs  settings.rs  timeline.rs  view.astro  view.rs
src/pages/settings/: info.astro
src/twtxt/: metadata.rs  parsing.rs  threading.rs  twt_hash.rs
src/ui/: timeline.cpp  timeline.h  tweet_form.cpp  tweet_form.h  window.cpp  window.h
src/ui/following/: entry.cpp  entry.h
src/ui/settings/: panel.cpp  panel.h
src/ui/timeline/: timeline.cpp  timeline.h  tweet_form.cpp  tweet_form.h
src/ui/view/: view_feed.cpp  view_feed.h  view_form.cpp  view_form.h
src/ui/widgets/: richtextdelegate.cpp  richtextdelegate.h
src/utils/: download.rs  hash.rs  parsing.rs  paths.rs  styling.rs  threading.rs  timeline.ts
