[package]
name = "twtgui"
version = "0.1.0"
edition = "2024"

[profile.release]
debug = true

[dependencies]
iced = { version = "0.14", features = ["wgpu", "image", "tokio"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
config = "0.14"
reqwest = "0.13.2"
url = "2.5.8"
rust-ini = "0.21.3"
webbrowser = "1.1.0"
serde_json = "1.0.149"
sha2 = "0.10.9"
hex = "0.4.3"
bytes = "1.11.1"
blake2 = "0.10.6"
data-encoding = "2.10.0"
regex = "1.12.3"
