[package]
name = "twtgui"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.14", features = ["wgpu", "image", "markdown", "highlighter", "tokio"] }
image = { version = "0.25.10", default-features = false, features = ["jpeg", "png", "webp"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
reqwest = "0.13.2"
url = "2.5.8"
webbrowser = "1.1.0"
serde_json = "1.0.149"
sha2 = "0.10.9"
hex = "0.4.3"
bytes = "1.11.1"
blake2 = "0.10.6"
data-encoding = "2.10.0"
regex = "1.12.3"
directories = "6.0.0"
toml = "1.0.3"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tracing-appender = "0.2.5"
dark-light = "2.0.0"

[build-dependencies]
chrono = "0.4"
winres = "0.1.12"
