[package]
name = "twtgui"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "^0.14", features = ["wgpu", "image", "markdown", "highlighter", "tokio"] }
image = { version = "^0.25", default-features = false, features = ["jpeg", "png", "webp"] }
chrono = { version = "^0.4", features = ["serde"] }
serde = { version = "^1", features = ["derive"] }
reqwest = "^0.13"
webbrowser = "^1.1"
serde_json = "^1.0"
sha2 = "^0.10"
hex = "^0.4"
bytes = "^1.11"
blake2 = "^0.10"
data-encoding = "^2.10"
regex = "^1.12"
directories = "^6.0"
toml = "^1.0"
tracing = "^0.1"
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }
tracing-appender = "^0.2"
dark-light = "^2.0"
opengraph = { git = "https://github.com/taxevaiden/opengraph", branch = "master" }

[build-dependencies]
chrono = "^0.4"
winres = "^0.1"
